# SpaceBiem

./: README.md  local.properties
SDL/app/: build.gradle
SDL/app/jni/: Application.mk  SDL2
SDL/app/jni/SDL2_mixer/: CMakeLists.txt
SDL/app/jni/src/: CMakeLists.txt
SDL/app/jni/src/spacebiem/biemgine/components/: AffectedByGravityComponent.h  AnimatedTextureComponent.cpp  GroundComponent.h  GroundedComponent.cpp  GroundedComponent.h  PhysicsComponent.h  PositionComponent.h  RectangleComponent.h  ScriptComponent.h  TextComponent.h  TextureComponent.h
SDL/app/jni/src/spacebiem/biemgine/core/: Loop.cpp  Loop.h
SDL/app/jni/src/spacebiem/biemgine/devices/graphics/: GraphicsDevice.h
SDL/app/jni/src/spacebiem/biemgine/entities/: Entity.cpp  Entity.h  SpriteEntity.cpp  TextUIEntity.cpp
SDL/app/jni/src/spacebiem/biemgine/managers/: EntityManager.cpp  EntityManager.h  FileHandler.cpp  StateManager.h  SystemManager.h
SDL/app/jni/src/spacebiem/biemgine/primitives/: Primitives.cpp  Primitives.h  RandomGenerator.cpp  RandomGenerator.h
SDL/app/jni/src/spacebiem/biemgine/scenes/: Scene.h
SDL/app/jni/src/spacebiem/biemgine/systems/: AnimateSystem.h  CameraSystem.cpp  CameraSystem.h  RenderSystem.cpp  RenderSystem.h
SDL/app/jni/src/spacebiem/biemgine/systems/physics/: ContactListener.cpp  ContactListener.h  PhysicsSystem.cpp  PhysicsSystem.h
SDL/app/jni/src/spacebiem/spacebiem/: AdEntity.cpp  FileParser.cpp  stdafx.h
SDL/app/jni/src/spacebiem/spacebiem/builder/: UIButtonListBuilder.cpp  UIButtonListBuilder.h
SDL/app/jni/src/spacebiem/spacebiem/components/: AtmosphereComponent.cpp  AtmosphereComponent.h  GravityComponent.h  MovementComponent.h  OxygenComponent.h  ResourceComponent.h  ScoreBonusComponent.h  ScoreComponent.cpp
SDL/app/jni/src/spacebiem/spacebiem/entities/: ButtonUIEntity.cpp  InputIndicatorEntity.h  MummieAIEntity.h  OxygenUIEntity.h  PlanetEarthEntity.cpp  PlanetEntity.cpp  PlanetIceEntity.h  PlanetLavaEntity.h  PlanetSandEntity.h  PlayerEntity.cpp  ResourceEntity.cpp  ResourceUIEntity.h  ScoreUIEntity.cpp  SnowmanAIEntity.h  WormholeEntity.cpp
SDL/app/jni/src/spacebiem/spacebiem/factories/: EntityFactory.h  NameGenerator.h  PlanetFactory.cpp  ResourceFactory.cpp  ResourceFactory.h  SaveBlobEntityBuilder.cpp  SaveBlobFactory.h  ScoreUIFactory.cpp  ScoreUIFactory.h  UniverseBuilder.h  UniverseGenerator.cpp  UniverseGenerator.h
SDL/app/jni/src/spacebiem/spacebiem/globals/: Ads.cpp  Player.cpp
SDL/app/jni/src/spacebiem/spacebiem/scenes/: CreditsScene.cpp  CreditsScene.h  GameoverScene.cpp  HelpScene.cpp  HelpScene.h  HighScoreScene.h  LevelScene.cpp  LevelScene.h  MenuScene.cpp  ProfileScene.cpp  StoryScene.cpp  TestLevelScene.cpp  WinScene.h
SDL/app/jni/src/spacebiem/spacebiem/systems/: AIMovementSystem.cpp  CheatSystem.h  DragDropSystem.cpp  DragDropSystem.h  GameoverSystem.cpp  GravitySystem.h  JumpSystem.h  MovementSystem.cpp  MovementSystem.h  OxygenSystem.h  ResourceCollectingSystem.h  ScoreSystem.cpp  ScoreSystem.h  ScoreUISystem.h  WinSystem.cpp
app/: build.gradle
app/jni/: CMakeLists.txt
app/jni/Box2D/: Android.mk  CMakeLists.txt
(+102 files in other folders)
